--- a/index.html
+++ b/index.html
@@ -13,248 +13,229 @@
           src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
   </script>
   <style>
-    /* CSS yang dioptimalkan */
-    :root {
-      --primary: #4b0082;
-      --secondary: #00bfa5;
-      --background: #121212;
-      --text: #e0e0e0;
-      --card-bg: rgba(255,255,255,0.06);
-    }
+/* Variabel untuk konsistensi */
+:root {
+  --spacing-unit: 4px;
+  --border-radius: 8px;
+  --transition-speed: 0.2s;
+  --primary: #4b0082;
+  --secondary: #00bfa5;
+  --background: #121212;
+  --text: #e0e0e0;
+  --card-bg: rgba(255,255,255,0.06);
+}
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+/* Reset dan dasar */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-    body {
-      font-family: system-ui, -apple-system, sans-serif;
-      background: var(--background);
-      color: var(--text);
-      line-height: 1.6;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
+body {
+  font-family: system-ui, -apple-system, sans-serif;
+  background: var(--background);
+  color: var(--text);
+  line-height: 1.6;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 
-    header {
-      background: linear-gradient(135deg, var(--primary), var(--secondary));
-      padding: 1rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
+/* Header */
+header {
+  background: linear-gradient(135deg, var(--primary), var(--secondary));
+  padding: calc(var(--spacing-unit) * 2) var(--spacing-unit);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--spacing-unit);
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
 
-    .logo {
-      font-size: 1.75rem;
-      font-weight: 900;
-      background: linear-gradient(135deg, #e040fb, var(--secondary));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
+.logo {
+  font-size: calc(1.5rem + 0.5vw);
+  font-weight: 900;
+  background: linear-gradient(135deg, #e040fb, var(--secondary));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: var(--spacing-unit);
+}
 
-    nav {
-      flex: 1;
-      max-width: 600px;
-      margin: 0 1rem;
-      position: relative;
-    }
+/* Navigasi */
+nav {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--spacing-unit);
+}
 
-    .search-container {
-      position: relative;
-      width: 100%;
-    }
+.search-container {
+  width: 100%;
+  position: relative;
+  max-width: 600px;
+  margin: 0 auto;
+}
 
-    .search-input {
-      width: 100%;
-      padding: 0.75rem 1rem;
-      border-radius: 20px;
-      border: none;
-      background: rgba(255,255,255,0.2);
-      color: var(--text);
-      font-size: 1rem;
-    }
+.search-input {
+  width: 100%;
+  padding: calc(var(--spacing-unit) * 1.5) var(--spacing-unit);
+  border-radius: var(--border-radius);
+  border: none;
+  background: rgba(255,255,255,0.2);
+  color: var(--text);
+  font-size: calc(0.9rem + 0.2vw);
+}
 
-    .search-input::placeholder {
-      color: rgba(255,255,255,0.7);
-    }
+/* Genre Dropdown */
+.genre-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background: #1e1e1e;
+  border-radius: 0 0 var(--border-radius) var(--border-radius);
+  box-shadow: 0 calc(var(--spacing-unit) * 2) calc(var(--spacing-unit) * 4) rgba(0,0,0,0.3);
+  z-index: 100;
+  max-height: calc(100vh - 200px);
+  overflow-y: auto;
+  margin-top: var(--spacing-unit);
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(calc(-1 * var(--spacing-unit)));
+  transition: all var(--transition-speed) ease;
+}
 
-    .genre-dropdown {
-      position: absolute;
-      top: 100%;
-      left: 0;
-      right: 0;
-      background: #1e1e1e;
-      border-radius: 0 0 12px 12px;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
-      z-index: 100;
-      max-height: 300px;
-      overflow-y: auto;
-      margin-top: 0.5rem;
-      opacity: 0;
-      visibility: hidden;
-      transform: translateY(-10px);
-      transition: all 0.2s ease;
-    }
+.genre-dropdown.show {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
 
-    .genre-dropdown.show {
-      opacity: 1;
-      visibility: visible;
-      transform: translateY(0);
-    }
+.genre-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(calc(100% / 3), 1fr));
+  gap: var(--spacing-unit);
+  padding: var(--spacing-unit);
+}
 
-    .genre-list {
-      display: flex;
-      flex-wrap: wrap;
-      padding: 1rem;
-      gap: 0.5rem;
-    }
+.genre-item {
+  padding: calc(var(--spacing-unit) * 1.5);
+  background: rgba(0,191,165,0.1);
+  border-radius: var(--border-radius);
+  font-size: calc(0.8rem + 0.1vw);
+  cursor: pointer;
+  transition: all var(--transition-speed) ease;
+  text-align: center;
+}
 
-    .genre-item {
-      padding: 0.5rem 1rem;
-      background: rgba(0,191,165,0.1);
-      border-radius: 16px;
-      font-size: 0.875rem;
-      cursor: pointer;
-      transition: all 0.2s ease;
-    }
+/* Main Content */
+main {
+  flex: 1;
+  padding: calc(var(--spacing-unit) * 2);
+  max-width: 1200px;
+  margin: 0 auto;
+  overflow-y: auto;
+}
 
-    .genre-item:hover {
-      background: rgba(0,191,165,0.3);
-      transform: scale(1.05);
-    }
+h1 {
+  font-size: calc(1.8rem + 1vw);
+  text-align: center;
+  margin: calc(var(--spacing-unit) * 3) 0;
+  background: linear-gradient(135deg, #e040fb, var(--secondary));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
-    main {
-      flex: 1;
-      padding: 1rem;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
+/* Card Layout */
+.group {
+  margin-bottom: calc(var(--spacing-unit) * 3);
+}
 
-    h1 {
-      font-size: 2rem;
-      text-align: center;
-      margin: 1.5rem 0;
-      background: linear-gradient(135deg, #e040fb, var(--secondary));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
+.group-title {
+  font-weight: bold;
+  margin-bottom: var(--spacing-unit);
+  font-size: calc(1rem + 0.2vw);
+  color: var(--secondary);
+}
 
-    .group {
-      margin-bottom: 1.5rem;
-    }
+.group-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: calc(var(--spacing-unit) * 2);
+}
 
-    .group-title {
-      font-weight: bold;
-      margin-bottom: 0.5rem;
-      font-size: 1.125rem;
-      color: var(--secondary);
-    }
+.card {
+  background: var(--card-bg);
+  border-radius: var(--border-radius);
+  padding: calc(var(--spacing-unit) * 1.5);
+  transition: all var(--transition-speed) ease;
+  cursor: pointer;
+}
 
-    .group-grid {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-      justify-content: center;
-    }
+.card:hover {
+  transform: translateY(calc(-1 * var(--spacing-unit)));
+  box-shadow: 0 calc(var(--spacing-unit) * 2) calc(var(--spacing-unit) * 6) rgba(0,191,165,0.5);
+}
 
-    .card {
-      background: var(--card-bg);
-      border-radius: 12px;
-      padding: 0.75rem;
-      flex: 1 1 calc(50% - 1rem);
-      max-width: calc(50% - 1rem);
-      text-align: center;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-      cursor: pointer;
-    }
+.card img {
+  width: 100%;
+  height: auto;
+  aspect-ratio: 3/4;
+  object-fit: cover;
+  border-radius: calc(var(--border-radius) * 0.8);
+  background: #262626;
+  box-shadow: 0 calc(var(--spacing-unit)) calc(var(--spacing-unit) * 2) rgba(0,0,0,0.3);
+  margin-bottom: var(--spacing-unit);
+}
 
-    .card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 8px 24px rgba(0,191,165,0.5);
-    }
+/* Footer */
+footer {
+  background: #1a1a1a;
+  color: #606060;
+  text-align: center;
+  padding: calc(var(--spacing-unit) * 3);
+  font-size: calc(0.8rem + 0.1vw);
+}
 
-    .card img {
-      width: 100%;
-      height: auto;
-      aspect-ratio: 3/4;
-      object-fit: cover;
-      border-radius: 8px;
-      background: #262626;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      margin-bottom: 0.5rem;
-    }
+/* Media Queries */
+@media (min-width: 600px) {
+  header {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: calc(var(--spacing-unit) * 3) calc(var(--spacing-unit) * 4);
+  }
 
-    .card h2 {
-      font-size: 0.9rem;
-      margin: 0.25rem 0;
-      color: var(--secondary);
-    }
+  .logo {
+    margin-bottom: 0;
+  }
 
-    .card .genre {
-      font-size: 0.75rem;
-      margin-bottom: 0.25rem;
-    }
+  nav {
+    flex-direction: row;
+    gap: calc(var(--spacing-unit) * 3);
+  }
 
-    .card .rating {
-      font-size: 0.7rem;
-      color: #ffa726;
-    }
+  .search-container {
+    max-width: 400px;
+  }
 
-    .card .views {
-      font-size: 0.7rem;
-      color: #90caf9;
-    }
+  .genre-list {
+    grid-template-columns: repeat(auto-fit, minmax(calc(100% / 4), 1fr));
+  }
 
-    footer {
-      background: #1a1a1a;
-      color: #606060;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.875rem;
-    }
+  .group-grid {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+}
 
-    footer a {
-      color: var(--secondary);
-      margin: 0 0.5rem;
-    }
-
-    #tts-warning {
-      display: none;
-      background: #ff9800;
-      color: #000;
-      padding: 0.75rem;
-      text-align: center;
-      font-size: 0.875rem;
-    }
-
-    #loading-indicator {
-      text-align: center;
-      padding: 1rem;
-      display: none;
-      color: var(--secondary);
-    }
-
-    @media (min-width: 600px) {
-      .card {
-        flex: 1 1 calc(25% - 1rem);
-        max-width: calc(25% - 1rem);
-      }
-      
-      .genre-item {
-        flex: 1 0 18%;
-      }
-    }
-
-    @media (max-width: 599px) {
-      .genre-item {
-        flex: 1 0 40%;
-      }
-    }
+@media (min-width: 900px) {
+  .group-grid {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+}
   </style>
 </head>
 <body>
