--- a/index.html
+++ b/index.html
@@ -164,21 +164,39 @@ h1 {
 
 .group-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: calc(var(--spacing-unit) * 2);
+  grid-template-rows: auto auto;
+  grid-auto-flow: column;
+  gap: 12px;
+  justify-content: center;
+  padding: 12px;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  scrollbar-width: none;
+}
+
+.group-grid::-webkit-scrollbar {
+  display: none;
 }
 
 .card {
-  background: var(--card-bg);
-  border-radius: var(--border-radius);
-  padding: calc(var(--spacing-unit) * 1.5);
-  transition: all var(--transition-speed) ease;
+  background: rgba(255,255,255,0.06);
+  border-radius: 12px;
+  padding: 8px;
+  min-width: 150px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
   cursor: pointer;
 }
 
 .card:hover {
-  transform: translateY(calc(-1 * var(--spacing-unit)));
-  box-shadow: 0 calc(var(--spacing-unit) * 2) calc(var(--spacing-unit) * 6) rgba(0,191,165,0.5);
+  transform: translateY(-4px);
+  box-shadow: 0 8px 24px rgba(0,191,165,0.5);
+}
+
+@media (max-width: 599px) {
+  .group-grid {
+    grid-template-rows: auto;
+    grid-auto-flow: row;
+  }
 }
 
 .card img {
