--- a/index.html
+++ b/index.html
@@ -13,232 +13,232 @@
           src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
   </script>
   <style>
-/* Variabel untuk konsistensi */
-:root {
-  --spacing-unit: 4px;
-  --border-radius: 16px;
-  --transition-speed: 0.2s;
-  --primary: #4b0082;
-  --secondary: #00bfa5;
-  --background: #121212;
-  --text: #e0e0e0;
-  --card-bg: rgba(255,255,255,0.06);
-}
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: #121212;
+      color: #e0e0e0;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+    header {
+      background: linear-gradient(135deg, #4b0082, #00bfa5);
+      padding: 16px 24px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 12px;
+      position: relative;
+    }
+    header .logo {
+      font-weight: 900;
+      font-size: 28px;
+      background: linear-gradient(135deg, #e040fb, #00bfa5);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    header nav {
+      flex: 1 1 280px;
+      position: relative;
+    }
+    header nav input {
+      width: 100%;
+      padding: 8px 16px;
+      border-radius: 20px;
+      border: none;
+      background: rgba(255,255,255,0.2);
+      color: #fff;
+      font-size: 16px;
+    }
+    header nav input::placeholder {
+      color: rgba(255,255,255,0.7);
+    }
+    header select {
+      background: rgba(255,255,255,0.2);
+      border: none;
+      padding: 6px 12px;
+      border-radius: 12px;
+      color: #fff;
+      font-size: 14px;
+    }
+    main {
+      padding: 24px 16px;
+      flex: 1;
+    }
+    h1 {
+      font-size: 2rem;
+      text-align: center;
+      margin-bottom: 24px;
+      background: linear-gradient(135deg, #e040fb, #00bfa5);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    .group {
+      margin-bottom: 24px;
+    }
+    .group-title {
+      font-weight: bold;
+      margin-bottom: 8px;
+      font-size: 1.2rem;
+      color: #00bfa5;
+    }
+    .group-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+      justify-content: center;
+    }
+    .card {
+      background: rgba(255,255,255,0.06);
+      border-radius: 12px;
+      padding: 8px;
+      flex: 1 1 calc(50% - 12px);
+      max-width: calc(50% - 12px);
+      text-align: center;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      cursor: pointer;
+    }
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 8px 24px rgba(0,191,165,0.5);
+    }
+    .card img {
+      width: 100%;
+      height: auto;
+      aspect-ratio: 3/4;
+      object-fit: cover;
+      border-radius: 8px;
+      background: #262626;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      margin-bottom: 8px;
+    }
+    .card h2 {
+      font-size: 0.9rem;
+      margin: 4px 0;
+      color: #00bfa5;
+    }
+    .card .genre {
+      font-size: 0.75rem;
+      margin-bottom: 4px;
+    }
+    .card .rating {
+      font-size: 0.7rem;
+      color: #ffa726;
+    }
+    .card .views {
+      font-size: 0.7rem;
+      color: #90caf9;
+    }
+    footer {
+      background: #1a1a1a;
+      color: #606060;
+      text-align: center;
+      padding: 16px;
+      font-size: 12px;
+    }
+    footer a {
+      color: #00bfa5;
+      margin: 0 6px;
+    }
+    #tts-warning {
+      display: none;
+      background: #ff9800;
+      color: #000;
+      padding: 10px;
+      text-align: center;
+      font-size: 14px;
+    }
+    #loading-indicator {
+      text-align: center;
+      padding: 20px;
+      display: none;
+      color: #00bfa5;
+    }
+    .genre-dropdown {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      background: #1e1e1e;
+      border-radius: 0 0 12px 12px;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+      z-index: 100;
+      max-height: 300px;
+      overflow-y: auto;
+      margin-top: 5px;
+    }
+    .genre-dropdown.show {
+      display: block;
+    }
+    .genre-header {
+      padding: 12px;
+      font-weight: bold;
+      border-bottom: 1px solid #333;
+      background: #252525;
+      position: sticky;
+      top: 0;
+    }
+    .genre-list {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 8px;
+    }
+    .genre-item {
+      padding: 8px 12px;
+      margin: 4px;
+      background: rgba(0,191,165,0.1);
+      border-radius: 16px;
+      font-size: 0.8rem;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+    .genre-item:hover {
+      background: rgba(0,191,165,0.3);
+      transform: scale(1.05);
+    }
+    .search-container {
+      position: relative;
+    }
+    .clear-search {
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      background: none;
+      border: none;
+      color: rgba(255,255,255,0.5);
+      cursor: pointer;
+      display: none;
+    }
+    .clear-search:hover {
+      color: #fff;
+    }
 
-/* Reset dan dasar */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+    @media (min-width: 600px) {
+      .card {
+        flex: 1 1 calc(25% - 12px);
+        max-width: calc(25% - 12px);
+      }
+      .genre-item {
+        flex: 1 0 18%;
+      }
+    }
 
-body {
-  font-family: system-ui, -apple-system, sans-serif;
-  background: var(--background);
-  color: var(--text);
-  line-height: 1.6;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-/* Header */
-header {
-  background: linear-gradient(135deg, var(--primary), var(--secondary));
-  padding: calc(var(--spacing-unit) * 2) var(--spacing-unit);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  top: 0;
-  z-index: 100;
-}
-
-.logo {
-  font-size: calc(1.5rem + 0.5vw);
-  font-weight: 900;
-  background: linear-gradient(135deg, #e040fb, var(--secondary));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  margin-bottom: var(--spacing-unit);
-}
-
-/* Navigasi */
-nav {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: var(--spacing-unit);
-}
-
-.search-container {
-  width: 100%;
-  position: relative;
-  max-width: 600px;
-  margin: 0 auto;
-}
-
-/* Box Pencarian */
-.search-input {
-  width: 100%;
-  padding: calc(var(--spacing-unit) * 1.5) var(--spacing-unit);
-  border: none;
-  background: rgba(255,255,255,0.2);
-  color: var(--text);
-  font-size: calc(0.9rem + 0.2vw);
-  border-radius: var(--border-radius);
-  backdrop-filter: blur(8px);
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-  transition: all var(--transition-speed) ease;
-}
-
-.search-input::placeholder {
-  color: rgba(255,255,255,0.7);
-}
-
-.search-input:focus {
-  outline: none;
-  box-shadow: 0 4px 12px rgba(0,191,165,0.2);
-  background: rgba(255,255,255,0.15);
-}
-
-/* Genre Dropdown */
-.genre-dropdown {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  right: 0;
-  background: #1e1e1e;
-  border-radius: 0 0 var(--border-radius) var(--border-radius);
-  box-shadow: 0 calc(var(--spacing-unit) * 2) calc(var(--spacing-unit) * 4) rgba(0,0,0,0.3);
-  z-index: 100;
-  max-height: calc(100vh - 200px);
-  overflow-y: auto;
-  margin-top: var(--spacing-unit);
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(calc(-1 * var(--spacing-unit)));
-  transition: all var(--transition-speed) ease;
-}
-
-.genre-dropdown.show {
-  opacity: 1;
-  visibility: visible;
-  transform: translateY(0);
-}
-
-/* Main Content */
-main {
-  flex: 1;
-  padding: calc(var(--spacing-unit) * 2);
-  max-width: 1200px;
-  margin: 0 auto;
-  overflow-y: auto;
-}
-
-h1 {
-  font-size: calc(1.8rem + 1vw);
-  text-align: center;
-  margin: calc(var(--spacing-unit) * 3) 0;
-  background: linear-gradient(135deg, #e040fb, var(--secondary));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-/* Card Layout */
-.group {
-  margin-bottom: calc(var(--spacing-unit) * 3);
-}
-
-.group-title {
-  font-weight: bold;
-  margin-bottom: var(--spacing-unit);
-  font-size: calc(1rem + 0.2vw);
-  color: var(--secondary);
-}
-
-.group-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: calc(var(--spacing-unit) * 2);
-  justify-content: center;
-  padding: calc(var(--spacing-unit) * 2);
-}
-
-/* Card Styling */
-.card {
-  background: var(--card-bg);
-  border-radius: var(--border-radius);
-  padding: calc(var(--spacing-unit) * 1.5);
-  transition: all var(--transition-speed) ease;
-  cursor: pointer;
-  backdrop-filter: blur(4px);
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-}
-
-.card:hover {
-  transform: translateY(calc(-1 * var(--spacing-unit)));
-  box-shadow: 0 8px 24px rgba(0,191,165,0.3);
-}
-
-.card img {
-  width: 100%;
-  height: auto;
-  aspect-ratio: 3/4;
-  object-fit: cover;
-  border-radius: calc(var(--border-radius) * 0.8);
-  background: #262626;
-  box-shadow: 0 calc(var(--spacing-unit)) calc(var(--spacing-unit) * 2) rgba(0,0,0,0.3);
-  margin-bottom: var(--spacing-unit);
-}
-
-.card h2 {
-  font-size: calc(0.9rem + 0.2vw);
-  margin: 0.25rem 0;
-  color: var(--secondary);
-}
-
-.card .genre {
-  font-size: calc(0.75rem + 0.1vw);
-  margin-bottom: 0.25rem;
-}
-
-.card .rating {
-  font-size: calc(0.7rem + 0.1vw);
-  color: #ffa726;
-}
-
-.card .views {
-  font-size: calc(0.7rem + 0.1vw);
-  color: #90caf9;
-}
-
-/* Footer */
-footer {
-  background: #1a1a1a;
-  color: #606060;
-  text-align: center;
-  padding: calc(var(--spacing-unit) * 3);
-  font-size: calc(0.8rem + 0.1vw);
-}
-
-footer a {
-  color: var(--secondary);
-  margin: 0 calc(var(--spacing-unit));
-}
-
-/* Media Queries */
-@media (max-width: 599px) {
-  .group-grid {
-    grid-template-columns: 1fr;
-  }
-  
-  .search-container {
-    max-width: none;
-    padding: 0 var(--spacing-unit);
-  }
-}
+    @media (max-width: 599px) {
+      .genre-item {
+        flex: 1 0 40%;
+      }
+    }
   </style>
 </head>
 <body>
