--- a/index.html
+++ b/index.html
@@ -291,7 +291,10 @@
 
 <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-    import { getDatabase, ref, onValue, limitToFirst, query, orderByKey, startAt, runTransaction, get } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+    import {
+        getDatabase, ref, onValue, limitToFirst,
+        query, orderByKey, startAt, runTransaction, get
+    } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 
     const firebaseConfig = {
         apiKey: "AIzaSyDeiLybtGc6evATj5O7M1FiJd1GPYd-rYc",
