--- a/index.html
+++ b/index.html
@@ -304,6 +304,10 @@
         storageBucket: "tamplatedoc.appspot.com",
         messagingSenderId: "264966107720",
         appId: "1:264966107720:web:868abe93cdff209040de7d"
+    experimentalAutoDetectLongPolling: true,
+    experimentalConnectTimeout: 10000,
+    experimentalMaxRetries: 5
+};
     };
 
     const app = initializeApp(firebaseConfig);
