--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <meta name="keywords" content="ebook, cerita fantasi, cerita roman, hiburan cerita, koleksi cerita, perpustakaan digital, cerita online, buku gratis, bacaan online, cerita anak, cerita petualangan, novel digital" />
   <meta name="author" content="Perpustakaan Digital" />
   <meta name="robots" content="index, follow" />
-  <script async custom-element="amp-auto-ads"
-          src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
   </script>
   <style>
     *, *::before, *::after {
@@ -242,8 +240,6 @@
   </style>
 </head>
 <body>
-  <amp-auto-ads type="adsense"
-        data-ad-client="ca-pub-6115422527383784">
   </amp-auto-ads>
   <header>
     <div class="logo" id="logo-text">Koleksi Cerita</div>
@@ -640,5 +636,6 @@
     updateTexts(state.currentLang);
     loadInitialData();
 </script>
+   <script type='text/javascript' src='//pl27093314.profitableratecpm.com/fa/77/8c/fa778c656545a5105858d9d11511d106.js'></script>
 </body>
 </html>
