--- a/about.html
+++ b/about.html
@@ -21,5 +21,6 @@
 <p>Tujuan kami adalah membantu pembaca menemukan ebook berkualitas dan memberikan insight seputar literasi digital. Semua konten kami dibuat untuk tujuan edukasi dan informasi.</p>
     <a class="btn-kembali" href="index.html">⬅ Kembali</a>
   </main>
+  <script type='text/javascript' src='//pl27093314.profitableratecpm.com/fa/77/8c/fa778c656545a5105858d9d11511d106.js'></script>
 </body>
 </html>
