--- a/disclaimer.html
+++ b/disclaimer.html
@@ -21,5 +21,6 @@
 <p>Kami hanya memberikan ulasan dan referensi ebook legal. Kami tidak menyediakan atau mendistribusikan file bajakan dalam bentuk apapun. Tautan eksternal yang kami bagikan adalah tanggung jawab masing-masing pemilik situs tersebut.</p>
       <a class="btn-kembali" href="index.html">⬅ Kembali</a>
 </main>
+  <script type='text/javascript' src='//pl27093314.profitableratecpm.com/fa/77/8c/fa778c656545a5105858d9d11511d106.js'></script>
 </body>
 </html>
