--- a/kunci.html
+++ b/kunci.html
@@ -145,5 +145,6 @@
     </div>
     
     <a href="javascript:history.back()" class="back-button">Kembali</a>
+    <script type='text/javascript' src='//pl27093314.profitableratecpm.com/fa/77/8c/fa778c656545a5105858d9d11511d106.js'></script>
 </body>
 </html>
