--- a/story.html
+++ b/story.html
@@ -280,5 +280,6 @@ footer a:hover {
       });
     }
   </script>
+  <script type='text/javascript' src='//pl27093314.profitableratecpm.com/fa/77/8c/fa778c656545a5105858d9d11511d106.js'></script>
 </body>
 </html>
