--- a/privacy.html
+++ b/privacy.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <header>AMDF.Group</header>
+  JS SYNC (NO ADBLOCK BYPASS)
+<script type='text/javascript' src='//pl27093314.profitableratecpm.com/fa/77/8c/fa778c656545a5105858d9d11511d106.js'></script>
 <main>
   <h2>Kebijakan Privasi</h2>
   <p>
@@ -22,5 +24,7 @@
 <p>Jika ada pertanyaan, silakan hubungi kami melalui halaman <a href="contact.html">☎️Kontak</a>.</p>
       <a class="btn-kembali" href="index.html">⬅ Kembali</a>
 </main>
+  <script async="async" data-cfasync="false" src="//pl27093350.profitableratecpm.com/830ae6ee7b7572376212c48dff0eeeb8/invoke.js"></script>
+<div id="container-830ae6ee7b7572376212c48dff0eeeb8"></div>
 </body>
 </html>
