--- a/disclaimer.html
+++ b/disclaimer.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <header>AMDF.Group</header>
+  <script async="async" data-cfasync="false" src="//pl27093350.profitableratecpm.com/830ae6ee7b7572376212c48dff0eeeb8/invoke.js"></script>
+<div id="container-830ae6ee7b7572376212c48dff0eeeb8"></div>
 <main>
   <h2>Disclaimer</h2>
   <p>
