--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header>AMDF.Group</header>
+  <script type='text/javascript' src='//pl27093314.profitableratecpm.com/fa/77/8c/fa778c656545a5105858d9d11511d106.js'></script>
   <main>
     <h2>Tentang Kami</h2>
     <p>
@@ -21,6 +22,7 @@
 <p>Tujuan kami adalah membantu pembaca menemukan ebook berkualitas dan memberikan insight seputar literasi digital. Semua konten kami dibuat untuk tujuan edukasi dan informasi.</p>
     <a class="btn-kembali" href="index.html">⬅ Kembali</a>
   </main>
-  <script type='text/javascript' src='//pl27093314.profitableratecpm.com/fa/77/8c/fa778c656545a5105858d9d11511d106.js'></script>
+  <script async="async" data-cfasync="false" src="//pl27093350.profitableratecpm.com/830ae6ee7b7572376212c48dff0eeeb8/invoke.js"></script>
+<div id="container-830ae6ee7b7572376212c48dff0eeeb8"></div>
 </body>
 </html>
