--- a/kunci.html
+++ b/kunci.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Anti Spam</title>
-    <link rel="icon" href="images/FAVVV.png" type="image/png">
+    <link rel="icon" href="favicon.png" type="image/png">
     <style>
         body {
             margin: 0;
@@ -112,8 +112,6 @@
     </style>
 </head>
 <body>
-    <script type='text/javascript' src='//pl27093314.profitableratecpm.com/fa/77/8c/fa778c656545a5105858d9d11511d106.js'></script>
-    <script async="async" data-cfasync="false" src="//pl27093350.profitableratecpm.com/830ae6ee7b7572376212c48dff0eeeb8/invoke.js"></script>
 <div id="container-830ae6ee7b7572376212c48dff0eeeb8"></div>
     <div class="email-text">
         <span class="char">E</span>
@@ -148,6 +146,7 @@
     </div>
     
     <a href="javascript:history.back()" class="back-button">Kembali</a>
-    
+        <script type='text/javascript' src='//pl27093314.profitableratecpm.com/fa/77/8c/fa778c656545a5105858d9d11511d106.js'></script>
+    <script async="async" data-cfasync="false" src="//pl27093350.profitableratecpm.com/830ae6ee7b7572376212c48dff0eeeb8/invoke.js"></script>
 </body>
 </html>
