--- a/story.html
+++ b/story.html
@@ -280,7 +280,8 @@ footer a:hover {
       });
     }
   </script>
-   <script type='text/javascript' src='//pl27093314.profitableratecpm.com/fa/77/8c/fa778c656545a5105858d9d11511d106.js'></script>
+<script async="async" data-cfasync="false" src="//pl27093350.profitableratecpm.com/830ae6ee7b7572376212c48dff0eeeb8/invoke.js"></script>
+<div id="container-830ae6ee7b7572376212c48dff0eeeb8"></div>
  
 </body>
 </html>
