--- a/kunci.html
+++ b/kunci.html
@@ -145,7 +145,7 @@
         <span class="char">!</span>
     </div>
     
-    <a href="javascript:history.back()" class="back-button">Kembali</a>
+    <a href="index.html" class="back-button">Kembali</a>
         <script type='text/javascript' src='//pl27093314.profitableratecpm.com/fa/77/8c/fa778c656545a5105858d9d11511d106.js'></script>
     <script async="async" data-cfasync="false" src="//pl27093350.profitableratecpm.com/830ae6ee7b7572376212c48dff0eeeb8/invoke.js"></script>
 </body>
