--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
       <a href="privacy.html" aria-label="Kebijakan Privasi">🔒 Kebijakan Privasi</a>
       <a href="contact.html" aria-label="Kontak Kami">☎️ Kontak</a>
       <a href="disclaimer.html" aria-label="Disclaimer">⚠️ Disclaimer</a>
+      <a href="compress.html" aria-label="Compres File">📷 Compress</a>
     </div>
     &copy; 2024 Perpustakaan Digital - Semua hak cipta dilindungi.
   </footer>
