--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
             privacy: '🔒 Kebijakan Privasi',
             contact: '☎️ Kontak',
             disclaimer: '⚠️ Disclaimer',
+            compress: '📷 Compress',
             copyright: '&copy; 2024 Perpustakaan Digital - Semua hak cipta dilindungi.',
             read: 'Baca Cerita',
             loading: 'Memuat cerita lebih banyak...',
@@ -343,6 +344,7 @@
             privacy: '🔒 Privacy Policy',
             contact: '☎️ Contact',
             disclaimer: '⚠️ Disclaimer',
+            compress: '📷 Compress',
             copyright: '&copy; 2024 Digital Library - All rights reserved.',
             read: 'Read Story',
             loading: 'Loading more stories...',
@@ -362,6 +364,7 @@
                 <a href="privacy.html">${texts[lang].privacy}</a>
                 <a href="contact.html">${texts[lang].contact}</a>
                 <a href="disclaimer.html">${texts[lang].disclaimer}</a>
+                <a href="compress.html">${texts[lang].compress}</a>   
             </div>
             ${texts[lang].copyright}
         `;
