--- a/compress.html
+++ b/compress.html
@@ -22,6 +22,17 @@
             max-height: 300px;
             object-fit: contain;
         }
+        footer {
+      background: #1a1a1a;
+      color: #606060;
+      text-align: center;
+      padding: 16px;
+      font-size: 12px;
+    }
+    footer a {
+      color: #00bfa5;
+      margin: 0 6px;
+    }
     </style>
 </head>
 <body class="bg-gray-50 min-h-screen py-8">
