--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
   <meta name="keywords" content="ebook, cerita fantasi, cerita roman, hiburan cerita, koleksi cerita, perpustakaan digital, cerita online, buku gratis, bacaan online, cerita anak, cerita petualangan, novel digital" />
   <meta name="author" content="Perpustakaan Digital" />
   <meta name="robots" content="index, follow" />
-  </script>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Koleksi Cerita",
+  "alternateName": "AMDF.GROUP",
+  "url": "https://amdf.web.id",
+  "logo": "https://amdf.web.id/logo.png",
+  "description": "Website ini dibuat oleh siswa SMK Teknik Elektronika, berisi ebook dan kumpulan cerita fantasi dari berbagai creator pelajar.",
+  "email": "info@amdf.web.id",
+  "sameAs": [
+    "https://www.instagram.com/willtorya_?igsh=MWNlc2lqb2RycDFrNA=="
+  ]
+}
+</script>
   <style>
     *, *::before, *::after {
       box-sizing: border-box;
