--- a/index.html
+++ b/index.html
@@ -509,9 +509,9 @@
     <header>
         <a href="catalog.html" class="logo">AMDF.GROUP E-Books</a>
         <div class="nav-links">
-            <a href="catalog.html">Catalog</a>
-            <a href="#about">About</a>
-            <a href="#privacy">Privacy Policy</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="about.html">About</a>
+            <a href="privacy_policy.html">Privacy Policy</a>
             <div class="mode-toggle" onclick="toggleDarkMode()">
                 <div class="circle"></div>
             </div>
@@ -561,9 +561,9 @@
     <footer>
         <p>&copy; 2025 AMDF.GROUP. All rights reserved.</p>
         <nav>
-            <a href="#about">About Us</a> |
-            <a href="#privacy">Privacy Policy</a> |
-            <a href="#terms">Terms of Service</a>
+            <a href="about.html">About Us</a> |
+            <a href="privacy_policy.html">Privacy Policy</a> |
+            <a href="terms_of_service.html">Terms of Service</a>
         </nav>
     </footer>
 
