--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -246,9 +246,9 @@
 </head>
 <body>
     <header>
-        <a href="catalog.html" class="logo">AMDF.GROUP</a>
+        <a href="index.html" class="logo">AMDF.GROUP</a>
         <div style="display: flex; align-items: center;">
-            <a href="catalog.html" class="btn-back"><i class="fas fa-arrow-left"></i> Back to Catalog</a>
+            <a href="index.html" class="btn-back"><i class="fas fa-arrow-left"></i> Back to Catalog</a>
             <div class="mode-toggle" onclick="toggleDarkMode()">
                 <div class="circle"></div>
             </div>
@@ -284,12 +284,12 @@
             <h2>Service Providers</h2>
             <p>We may employ third party companies and individuals to facilitate our Service, to provide the Service on our behalf, to perform Service-related services or to assist us in analyzing how our Service is used.</p>
             <p>These third parties have access to your Personal Information only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.</p>
-            <p>Specifically, we use **Google Firebase** for:</p>
+            <p>Specifically, we use Google Firebase for:</p>
             <ul>
-                <li>**Authentication:** To manage user accounts securely.</li>
-                <li>**Firestore Database:** For structured data storage (e.g., story details, author names).</li>
-                <li>**Realtime Database:** For real-time data and potentially more sensitive creator information (PIN, WhatsApp).</li>
-                <li>**Cloud Storage:** For storing story thumbnails.</li>
+                <li>Authentication: To manage user accounts securely.</li>
+                <li>Firestore Database: For structured data storage (e.g., story details, author names).</li>
+                <li>Realtime Database: For real-time data and potentially more sensitive creator information (PIN, WhatsApp).</li>
+                <li>Cloud Storage: For storing story thumbnails.</li>
             </ul>
 
             <h2>Security</h2>
@@ -310,7 +310,7 @@
             <h2>Contact Us</h2>
             <p>If you have any questions about this Privacy Policy, please contact us:</p>
             <ul>
-                <li>By email: support@amdf.group</li>
+                <li>By email: info@amdf.web.id</li>
             </ul>
         </section>
     </main>
